Add html to index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="scripts.js" defer></script>
 </head>
 
 <body>
   <h1>Rock Paper Scissors</h1>
-  <script src="scripts.js"></script>
+  <h4>Player's Score: </h4>
+  <h4>Computer's Score: </h4>
+  <button>Rock</button>
+  <button>Paper</button>
+  <button>Scissors</button>
+  <p>Player chooses *****</p>
+  <p>Computer chooses *****</p>
+  <p>***** beats *****! ***** wins!</p>
 </body>
 
 </html>
