Add click event to buttons

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <h1>Rock Paper Scissors</h1>
   <h4>Player's Score: </h4>
   <h4>Computer's Score: </h4>
-  <button>Rock</button>
-  <button>Paper</button>
-  <button>Scissors</button>
+  <button class="choice">Rock</button>
+  <button class="choice">Paper</button>
+  <button class="choice">Scissors</button>
   <p>Player chooses *****</p>
   <p>Computer chooses *****</p>
   <p>***** beats *****! ***** wins!</p>
