Add score keeping

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
   <h1>Rock Paper Scissors</h1>
   <h4>Player's Score: </h4>
+  <h4 id="pScore">0</h4>
   <h4>Computer's Score: </h4>
+  <h4 id="cmpScore">0</h4>
   <button class="choice">Rock</button>
   <button class="choice">Paper</button>
   <button class="choice">Scissors</button>
